--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
         let level = 1;
         let gameSpeed = 10;
         let spawnTimer = 0;
+        let lastTouchTime = 0; // 터치 중복 방지 시간 변수
         
         // 지형 관련 변수
         let groundSegments = [];
@@ -883,6 +884,16 @@
             // 스페이스바 기본 동작(스크롤, 버튼 클릭 등) 방지
             if (e.code === 'Space') {
                 e.preventDefault();
+            }
+
+            // 고스트 마우스 이벤트 방지: 터치 직후에 발생하는 mousedown 이벤트 무시
+            if (e.type === 'touchstart') {
+                lastTouchTime = Date.now();
+            } else if (e.type === 'mousedown') {
+                // 500ms 내에 터치 이벤트가 있었다면 무시
+                if (Date.now() - lastTouchTime < 500) {
+                    return;
+                }
             }
 
             if ((e.code === 'Space' || e.type === 'touchstart' || e.type === 'mousedown') && isPlaying) {
